--- a/01 JS Drum Kit/style.css
+++ b/01 JS Drum Kit/style.css
@@ -1,50 +1,68 @@
 html {
   font-size: 10px;
-  background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
-  background-size: cover;
+  background-color: #2b303a;
 }
 body,html {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+
+.title {
+  margin: 0 auto;
+  text-align: center;
+  color: rgba(215, 217, 219, 1);
+  font-size: 1.8rem;
+  padding-top: 5%;
 }
 
 .keys {
   display: flex;
   flex: 1;
-  min-height: 100vh;
+  min-height: 50vh;
   align-items: center;
   justify-content: center;
 }
 
 .key {
-  border: .4rem solid black;
-  border-radius: .5rem;
+  border-radius: .9rem;
   margin: 1rem;
   font-size: 1.5rem;
   padding: 1rem .5rem;
   transition: all .07s ease;
   width: 10rem;
   text-align: center;
-  color: white;
-  background: rgba(0,0,0,0.4);
-  text-shadow: 0 0 .5rem black;
+  color: #2b303a;
+  background: rgba(215, 217, 219, 1);
+  -webkit-box-shadow: 1px 3px 3px 3px black;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow:    1px 3px 3px 3px black;  /* Firefox 3.5 - 3.6 */
+  box-shadow:         1px 3px 3px 3px black;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
 }
 
 .playing {
-  transform: scale(1.1);
-  border-color: #ffc600;
-  box-shadow: 0 0 1rem #ffc600;
+  transform: scale(1.2);
+  border-color: black;
+  box-shadow: 0 0 2rem black;
 }
 
 kbd {
   display: block;
   font-size: 4rem;
+  font-family: inherit;
+  font-weight: 900;
 }
 
 .sound {
-  font-size: 1.2rem;
-  text-transform: uppercase;
+  font-size: 1.1rem;
   letter-spacing: .1rem;
-  color: #ffc600;
+  color: #2b303a;
+}
+
+.footer {
+  margin: 0 auto;
+  text-align: center;
+  color: rgba(215, 217, 219, .7);
+  font-size: 1.2rem;
+  padding-top: 1%;
+  font-weight: 200;
 }
